server/envoy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 9211
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: /
                            runtime_fraction:
                              default_value:
                                numerator: 50
                                denominator: HUNDRED
                              runtime_key: routing.traffic_shift.resilience
                          route:
                            cluster: httpbin_service
                        - match:
                            prefix: /
                          route:
                            cluster: non_routable_service
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: httpbin_service
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: httpbin_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin
                      port_value: 80
    - name: non_routable_service
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      connect_timeout: 2s
      load_assignment:
        cluster_name: non_routable_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 10.255.255.1
                      port_value: 80
